--- a/index.html
+++ b/index.html
@@ -25,11 +25,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Shine Smile</title>
 </head>
-<body>
-    <h1>fasfaadadasd</h1>
+<body style="height: 50000px;">
+    <header class="header">
+        <div class="container">
+            <div class="header--top">
+                <!-- logo -->
+                <a href="./"><img src="./assets/img/Logo.svg" alt="smile smile" class="logo"></a>
+                <!-- nav -->
+                <nav class="navbar">
+                    <ul class="navbar__list">
+                        <li class="navbar__item">
+                            <a href="" class="navbar__link navbar__link--active">Home</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="" class="navbar__link">Services</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="" class="navbar__link">About</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="" class="navbar__link">Doctors</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- cta action -->
+                 <div class="header__action">
+                    <a href="" class="header__action--login">Log In</a>
+                    <a href="" class="btn header__action--signUp">Sign Up</a>
+                 </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
